# korean_verb_tool

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.sh
migrations/: env.py
src/api/: audio.py  config.py
src/data_preparation/: data_models.py  main.py
src/korean_verb_tool/: app.py  audio.py  config.py  models.py  routers.py  utils.py
src/korean_verb_tool/db/: base.py  cruds.py  repository.py  session.py
src/korean_verb_tool/schemas/: vocabulary.py
src/korean_verb_tool/utils/: audio.py  prompt_manager.py  verb_handler.py  verb_variance.py
src/streamlit/: streamlit.py
